# paper-rings

./: .gitignore  README.md  aggregate.py  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
analysis/: drive_deltas.R  drive_deltas.Rmd  drive_deltas.html  glicko_vs_spread.Rmd  glicko_vs_spread.html  nfl_off_def_binomials.Rmd  nfl_off_def_binomials.html  nfl_off_def_vs_spread.Rmd  nfl_off_def_vs_spread.html
paper_rings/: __init__.py  fit_result.py  game_side.py  multi_season.py  the_real_thing.py
