[tool.poetry]
name = "paper-rings"
version = "0.1.0"
description = ""
authors = ["Nathan DeMaria <nathandmaria@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.1.4"
Cython = "==0.29.21"
fire = "^0.3.1"
pymc3 = "^3.10.0"
aiobotocore = "^1.1.2"
sklearn = "^0.0"
scikit-learn = "^0.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter = "^1.0.0"
black = "^20.8b1"
pylint = "^2.6.0"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
